--- a/css/style.css
+++ b/css/style.css
@@ -21,36 +21,77 @@ table{
 }
 
 */
+
+.myName{
+  font-family:Gill Sans;
+  font-size: 100px;
+  font-weight: bolder;
+  text-align: center;
+  color: #590696;
+  opacity: 0.9;
+
+}
 h1 {
 
-  font-family:sans-serif;
+  font-family:Gill Sans;
+  font-weight: bolder;
   text-align: center;
   color: #590696;
   opacity: 0.9;
 }
 
 h3 {
-  font-family:sans-serif;
+  font-family:Gill Sans;
+  font-weight: bold;
   text-align: center;
   color: #590696;
   opacity: 0.9;
 }
 
+.header{
+  font-family: Gill Sans;
+  font-size: 30px;
+  color: #590696;
+}
+.title{
+  font-family: Gill Sans;
+  font-size: 20px;
+  color: #590696
+}
+.class{
+  font-family:Gill Sans;
+  font-weight: lighter;
+  color: #590696;
+  opacity: 0.9;
+
+}
 p {
-  font-family:sans-serif;
+  font-family:Gill Sans;
   text-align: center;
+  font-weight: lighter;
   color: #590696;
   opacity: 0.9;
 }
+
+th{
+  font-family:Gill Sans;
+    font-weight: lighter;
+  text-align: center;
+  color: #590696;
+  opacity: 0.9;
+
+}
 td{
-  font-family:sans-serif;
+  font-family:Gill Sans;
+    font-weight: lighter;
   text-align: left;
   color: #590696;
   opacity: 0.9;
 }
 
 a {
-font-family:sans-serif;
+font-family:Gill Sans;
+font-weight: lighter;
   color: #590696;
   opacity: 0.9;
 }
