--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,20 @@
+
+/********Tags*********/
+
 body {
   background-color: #37E2D5;
 }
 
-hr {
-  background-color: none;
-  border-color: #FBCB0A;
-  opacity: 0.5;
-  border-style: dotted none none none;
-  width: 60%;
-  border-width: 150px;
-}
-
-table{
-  align-items: center;
-}
-
-/* img{
-  height: 50%;
-  width: 50%;
-}
-
-*/
-
-.myName{
-  font-family:Gill Sans;
-  font-size: 100px;
-  font-weight: bolder;
-  text-align: center;
-  color: #590696;
-  opacity: 0.9;
+.hRule:hover{
+  color: #C70A80;
 
 }
+
 h1 {
 
   font-family:Gill Sans;
   font-weight: bolder;
+  font-size: 100px;
   text-align: center;
   color: #590696;
   opacity: 0.9;
@@ -48,29 +28,17 @@ h3 {
   opacity: 0.9;
 }
 
-.header{
-  font-family: Gill Sans;
-  font-size: 30px;
-  color: #590696;
-}
-.title{
-  font-family: Gill Sans;
-  font-size: 20px;
-  color: #590696
-}
-.class{
-  font-family:Gill Sans;
-  font-weight: lighter;
-  color: #590696;
-  opacity: 0.9;
 
-}
 p {
   font-family:Gill Sans;
   text-align: center;
   font-weight: lighter;
   color: #590696;
   opacity: 0.9;
+}
+
+table{
+  align-items: center;
 }
 
 th{
@@ -100,4 +68,81 @@ main{
   text-align: justify;
   color: #C70A80;
   opacity: 1;
+}
+
+
+hr {
+  background-color: none;
+  border-color: #FBCB0A;
+  opacity: 0.5;
+  border-style: dotted none none none;
+  width: 60%;
+  border-width: 150px;
+}
+
+
+/* img{
+  height: 50%;
+  width: 50%;
+}
+*/
+
+/************class tags*********************/
+
+
+.name{
+  border: hidden;
+background-color: #C70A80;
+opacity: 0.2;
+}
+
+.email{
+  border: hidden;
+background-color: #C70A80;
+opacity: 0.2;
+}
+
+.tArea{
+  border: hidden;
+  background-color: #C70A80;
+  opacity: 0.2;
+
+}
+.headingOne{
+  font-family:Gill Sans;
+  font-size: 150px;
+  font-weight: lighter;
+  text-align: center;
+  color: #590696;
+  opacity: 0.9;
+
+}
+
+.getInTouch{
+  font-family: Gill Sans;
+  text-align: center;
+  font-size: 30px;
+  color: #590696;
+
+}
+
+.header{
+  font-family: Gill Sans;
+  text-align: center;
+  font-size: 30px;
+  color: #590696;
+}
+.title{
+  font-family: Gill Sans;
+  text-align: center;
+  font-size: 20px;
+  color: #590696
+}
+.class{
+  font-family:Gill Sans;
+  text-align: center;
+  font-weight: lighter;
+  color: #590696;
+  opacity: 0.9;
+
 }
