--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ h1 {
   font-family:Gill Sans;
   font-weight: bolder;
   font-size: 100px;
-  text-align: center;
+  text-align: left;
   color: #590696;
   opacity: 0.9;
 }
