--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,15 @@ body {
   background-color: white;
 }
 
-
-
-
 /* img{
   height: 50%;
   width: 50%;
 }
 */
 
+
+
+
 /************class tags*********************/
 
+.class
