--- a/css/style.css
+++ b/css/style.css
@@ -63,25 +63,26 @@ a:active{
 
 .name{
     display: flex;
-    justify-content: left;
+    
+    justify-content: right;
 }
 
 .menu{
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    flex:3;
+    justify-content: flex-end;
+    gap: 20px
 }
 
 .title{
     display: flex;
-    justify-content: left;
+    justify-content: right;
     
 }
 
 .pageTitle{
     display: flex;
-    justify-content: left;
+    justify-content: right;
 }
 
 
@@ -89,7 +90,7 @@ a:active{
     display: flex;
     flex-direction: column;
     justify-content:space-evenly;
-    align-content: left;
+    align-content: right;
     
 }
 
@@ -97,7 +98,17 @@ a:active{
     display: flex;
     flex-direction: column;
     justify-content:space-evenly;
-    align-content: left;
+    align-content: right;
     
 }
 
+.mail{
+    display: flex;
+    justify-content: right;
+}
+
+.vitae{
+    display: flex;
+    flex-direction: column;
+    align-content: right;
+}
