--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,13 @@
 /********Tags*********/
 
 body {
+    //min-height: 80px;
+    //border: 8px solid black;
+    display:flex;
+    flex-direction: column;
+   // justify-content: right;
     background-color: white;
-    
+    gap: 20px;
 }
 
 /* img{
