--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ body {
 */
 
 
+footer{
+    font-family: arial;
+}
+
 
 
 /************class tags*********************/
@@ -66,54 +70,4 @@ a:active{
     text-decoration:none;
 }
 
-.name{
-    display: flex;
-    
-    justify-content: right;
-}
 
-.menu{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    gap: 20px
-}
-
-.title{
-    display: flex;
-    justify-content: right;
-    
-}
-
-.pageTitle{
-    display: flex;
-    justify-content: right;
-}
-
-
-.audioProjects{
-    display: flex;
-    flex-direction: column;
-    justify-content:space-evenly;
-    align-content: right;
-    
-}
-
-.visualProjects{
-    display: flex;
-    flex-direction: column;
-    justify-content:space-evenly;
-    align-content: right;
-    
-}
-
-.mail{
-    display: flex;
-    justify-content: right;
-}
-
-.vitae{
-    display: flex;
-    flex-direction: column;
-    align-content: right;
-}
