--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 /********Tags*********/
 
 body {
+     
     //min-height: 80px;
     //border: 8px solid black;
     display:flex;
@@ -9,65 +10,23 @@ body {
    // justify-content: right;
     background-color: white;
     gap: 20px;
+    font-family: arial;
+    color: black;
+    text-align: right;
+    padding-right: 50px;
+
+    
 }
 
-/* img{
-  height: 50%;
-  width: 50%;
-}
-*/
 
 
 footer{
-    font-family: arial;
+    
 }
 
 
 
-/************class tags*********************/
-
-/**.class**/
 
 
-
-
-div {
-    color: white;
-    background-color: white;
-}
-
-h1{
-    font-family: arial;
-    color: black;
-}
-
-h2{
-    font-family: arial;
-    color: black;
-}
-
-h3{
-    font-family: arial;
-    color: black;
-}
-
-
-p {
-    font-family: arial;
-    color: black;
-}
-
-a:link{
-    text-decoration:none;
-}
-a:visited{
-    text-decoration:none;
-}
-a:hover{
-    text-decoration:none;
-}
-a:active{
-    text-decoration:none;
-}
 
 
