--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,11 @@ footer{
     text-decoration: none;
     color: black;
 }
+.my-name a:hover{
+    text-decoration: none;
+    color: #C3C4C6;
+    
+}
 
 
 .primary-navigation{
@@ -52,7 +57,9 @@ footer{
     display: flex;
     color: black;
     text-decoration: none;
-    
+}
+.primary-navigation a:hover{
+    color: #47474C;
 }
 
 .audio-project-links {
@@ -89,6 +96,9 @@ footer{
     list-style: none;
 }
 
+.edu-list-type{
+    font-size: 10px;
+}
 /*
  .art-links{
      border: dotted red;
@@ -115,3 +125,4 @@ footer{
 .art-shows-type{
     font-size: 10px;
 }
+
