--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
     flex-direction: column;
     background-color: white;
     gap: 20px;
-    font-family: arial;
+    font-family: "Helvetica";
     color: black;
     text-align: right;
     padding-right: 50px;
